# utrecht_V2

./: .env  Makefile  README.md  compose.yaml  detect_devices.py  install_docker_compose.sh
remote/: Dockerfile
remote/public/: index.html
remote/src/: bridge.yaml
remote/src/remote/: package.xml  setup.py
remote/src/remote/launch/: remote_launch.py
remote/src/remote/remote/: remote.py
robot/: Dockerfile  ros_entrypoint.sh
robot/src/: bridge.yaml
robot/src/robotic_arm/: package.xml  setup.py
robot/src/robotic_arm/launch/: launch.py
robot/src/robotic_arm/robotic_arm/: driver.py  telemetry.py
task/: simulation.py  task.py
