<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>remote</name>
  <version>2.0.0</version>
  <description>Package for manual robotic arm control using a Logitech Dual Action gamepad.</description>
  <maintainer email="chunfei.lung@hu.nl">Chun Fei Lung</maintainer>
  <license>MIT</license>

  <exec_depend>flask</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
